# resumeforger

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt  start.sh
.github/workflows/: ci.yml
tests/: conftest.py  test_views.py
website/: __init__.py  auth.py  config.py  models.py  views.py
website/templates/: base.html  contact.html  index.html  login.html  signup.html
