[project]
name = "resumeforger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-caching>=2.4.0",
    "flask-cors>=6.0.5",
    "flask-jwt-extended>=4.7.4",
    "flask-limiter>=4.1.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=26.0.0",
    "langchain>=1.3.10",
    "langchain-groq>=1.1.3",
    "psycopg2-binary>=2.9.12",
    "pypdf2>=3.0.1",
    "pytest>=9.1.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "werkzeug>=3.1.8",
]
